# async-processing-maryia

./: README.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 508c02b623dc_changed_type_of_jobtype_column.py  64dfff8c929a_initial_schema.py  c165b221206d_renamed_column_job_status_to_status_in_.py
api/: app.py  deps.py
api/routes/: dataset.py  job.py  jobs.py
db/: config.py  db_session_cm.py  enums.py  session.py
db/models/: datasets.py  job_events.py  jobs.py
job_runners/: celery_runner.py
ports/: job_runner.py
pydantic_tutorial/: main_.py
repositories/interfaces/: datasets.py  jobs.py
repositories/sqlalchemy/: datasets.py  jobs.py
schemas/: CreateDataset.py  ReadDataset.py
schemas/job_schemas/: create_job.py  read_job.py
services/: DatasetService.py  dataset_service.py  job_service.py  settings.py
services/storage/: s3_client.py  storage_service.py
storage/tmp/jobs/37dcfceb-6ec9-4880-b3b2-d46c1a5d6d5f/: normalized.csv
storage/tmp/jobs/96748be0-96c1-458c-ae0b-72e4d152009f/: anomalies.json
storage/tmp/jobs/e2e3017a-db3d-48b0-9903-ead1f228f74b/: normalized.csv
storage/tmp/jobs/ee08a567-6f5f-474d-8197-5fa56ea40412/: metrics.json
use_cases/: create_dataset_uc.py  create_job_uc.py  get_dataset_use_case.py  get_job_uc.py
workers/: celery_app.py  jobs.py
workers/processing/: anomalies.py  metrics.py  normalize.py
