[project]
name = "async-processing-maryia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "fastapi>=0.128.0",
    "psycopg>=3.3.2",
    "psycopg-binary>=3.3.2",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "boto3>=1.42.30",
    "celery>=5.6.2",
    "scipy>=1.17.0",
    "redis>=7.1.0",
]
